{
    "name": "Inputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4539c12f-0996-42b4-a934-9e17ae585c8d",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "9b7a1704-cd99-463f-8610-af3f93e9a7b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Gun1",
                    "type": "Button",
                    "id": "2e409f4a-70bc-4a5a-9cff-a1001fa2aad7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Gun2",
                    "type": "Button",
                    "id": "a26d74ec-c216-41a6-8b34-480b8eb545a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Gun3",
                    "type": "Button",
                    "id": "7bb72a66-faf7-4269-afa9-3d6429cbe4eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1569e6e7-e12b-427b-920c-a27edbc85237",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09fe0d4d-117f-4b75-9b3c-4c1db89107b6",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Gun1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2153033c-aa51-46de-af8d-6702e97f3cb1",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Gun2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9315d796-5255-4f43-839d-9237066e753e",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Gun3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}